fix signature pad on mobile.

--- a/src/common/styles/signaturepad.scss
+++ b/src/common/styles/signaturepad.scss
@@ -6,8 +6,12 @@
   height: 150px;
 }
 
-.m-signature-pad--body canvas {
-    width: 100%;
+.m-signature-pad--body {
+    height: 100%;
+    canvas {
+        height: 100%;
+        width: 100%;
+    }
 }
 
 .m-signature-pad--footer .button.clear {
